--- a/exercises/01_chatbot.ipynb
+++ b/exercises/01_chatbot.ipynb
@@ -2,19 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9292ce71",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "2c29dd8a",
+   "metadata": {},
    "source": [
     "# Building a Chatbot\n",
     "\n",
-    "First, we'll need to install a couple packages.\n"
+    "First, we'll need to install a couple packages. If using serverless, add the packages `langchain` and `databricks-langchain` to the environment.\n",
+    "If not using serverless run the below cell.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ee0d67d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install langchain databricks-langchain\n",
+    "%restart_python"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a384465a",
+   "id": "1a200eef",
    "metadata": {},
    "source": [
     "Today we'll be working with Databricks LLMs.\n",
@@ -25,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f0595b1",
+   "id": "dd033a3a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6a3877a",
+   "id": "2638894f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -55,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81c9991a",
+   "id": "da5472b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d21c6ad",
+   "id": "3336d788",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -107,32 +117,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3971e4dd",
+   "id": "fb998494",
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 0
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "801c1ac7",
+   "metadata": {},
    "source": [
-    "# Exercise 1.2 (Bonus):\n",
-    "#\n",
-    "# Use streamlit to build a simple chat interface.\n",
-    "#\n",
-    "# To test it, deploy the app.py to databricks apps using the UI."
+    "## Exercise 1.2 (Bonus):\n",
+    "Use streamlit to build a simple chat interface.\n",
+    "\n",
+    "To test it, deploy the app.py to databricks apps using the UI."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76a7c443",
+   "id": "0041301a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%writefile app.py\n",
+    "# %mkdir streamlit_app_01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cc5f433",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile streamlit_app_01/requirements.txt\n",
+    "# databricks-langchain\n",
+    "# langchain\n",
+    "# streamlit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "135ea44a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile streamlit_app_01/app.yaml\n",
+    "# command: [\"streamlit\", \"run\", \"app.py\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4ef40d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile streamlit_app_01/app.py\n",
     "# <solution>\n",
-    "import os\n",
     "import streamlit as st\n",
     "from databricks_langchain import ChatDatabricks\n",
-    "from langchain.messages import AIMessage, HumanMessage\n",
     "\n",
     "st.title(\"Chatbot\")\n",
     "\n",
@@ -140,12 +187,8 @@
     "    st.session_state.messages = []\n",
     "\n",
     "for message in st.session_state.messages:\n",
-    "    if isinstance(message, HumanMessage):\n",
-    "        with st.chat_message(\"user\"):\n",
-    "            st.markdown(message.content)\n",
-    "    elif isinstance(message, AIMessage):\n",
-    "        with st.chat_message(\"assistant\"):\n",
-    "            st.markdown(message.content)\n",
+    "    with st.chat_message(\"user\" if message is HumanMessage else \"assistant\"):\n",
+    "        st.markdown(message.content)\n",
     "\n",
     "if prompt := st.chat_input(\"What is up?\"):\n",
     "    st.session_state.messages.append(HumanMessage(content=prompt))\n",
