--- a/exercises/02_rag.ipynb
+++ b/exercises/02_rag.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "937f7ff4",
+   "id": "e763f616",
    "metadata": {},
    "source": [
     "# Exercise 2: RAG\n",
     "\n",
-    "Goal: Implement a simple Retrieval Augmented Generation (RAG) system.\n",
-    "Expected time: 10 min\n"
+    "Goal: Implement a simple Retrieval Augmented Generation (RAG) system.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66b0c378",
+   "id": "4be1fef9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c40aa4b7",
+   "id": "670c4291",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +32,16 @@
     "import os\n",
     "\n",
     "from databricks_langchain import ChatDatabricks, DatabricksEmbeddings\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.vectorstores import InMemoryVectorStore\n",
     "from langchain_community.document_loaders import PyMuPDFLoader\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_core.vectorstores import InMemoryVectorStore\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90afda5f",
+   "id": "a85443a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +52,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee8a58cd",
+   "id": "5dc32eb9",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_vectorstore():\n",
-    "    # TODO: This path needs to be adjusted for this to work on databricks\n",
     "    pdf_folder = \"data/knowledge_base\"\n",
     "    documents = []\n",
     "\n",
@@ -96,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f29836ec",
+   "id": "5ebec917",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8839c3f",
+   "id": "402298c1",
    "metadata": {},
    "outputs": [],
    "source": [
