--- a/exercises/03_tool_calling.ipynb
+++ b/exercises/03_tool_calling.ipynb
@@ -2,52 +2,69 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "18c21e4e",
+   "id": "7858e544",
    "metadata": {},
    "source": [
     "# Exercise 3: Tool Calling\n",
     "\n",
-    "Goal: Use LangChain to call a custom tool and handle the response.\n",
-    "Expected time: 10 min\n"
+    "Goal: Use LangChain to call a custom tool and handle the response.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7bd081d",
+   "id": "815cb8b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install databricks-langchain langchain-core\n",
+    "%pip install langchain databricks-langchain\n",
     "%restart_python"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9730ad36",
+   "id": "8447bb82",
    "metadata": {},
    "outputs": [],
    "source": [
     "from databricks_langchain import ChatDatabricks\n",
-    "from langchain_core.messages import HumanMessage, ToolMessage\n",
-    "from langchain_core.tools import tool"
+    "from langchain.messages import HumanMessage, ToolMessage\n",
+    "from langchain.tools import tool"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8de1df38",
-   "metadata": {},
+   "id": "2cbe5a22",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "model = ChatDatabricks(endpoint=\"databricks-claude-sonnet-4-5\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9b568ad",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "source": [
+    "## Tools\n",
+    "\n",
+    "Tools are simply python functions that are wrapped by the `@tool` decorator.\n",
+    "\n",
+    "The decorator takes care of translating the docstring and the types of the inputs into instructions\n",
+    "for the LLM when given the tool. The LLM does not call the function itself, instead it responds\n",
+    "with a json structure representing a call to the function, which we will"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1526f7e1",
+   "id": "fd8bcd93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5af07ba8",
+   "id": "5ce173b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +108,7 @@
     "    # Exercise 3.4: Execute tool calls manually and append results\n",
     "    for tool_call in ai_msg.tool_calls:\n",
     "        selected_tool = tools_by_name[tool_call[\"name\"]]\n",
-    "        \n",
+    "\n",
     "        # Invoke the selected tool\n",
     "        # <solution>\n",
     "        tool_output = selected_tool.invoke(tool_call[\"args\"])\n",
