--- a/exercises/04_react.ipynb
+++ b/exercises/04_react.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "00d31ab1",
+   "id": "f05520b0",
    "metadata": {},
    "source": [
     "# Exercise 4: ReAct Agent\n",
     "\n",
-    "Goal: Build a ReAct agent from scratch using LangGraph.\n",
-    "Expected time: 15 min\n"
+    "In this file, we'll build a ReAct agent using the LangGraph framework.\n",
+    "It would not be difficult to write an ReAct agent without a framework as well.\n",
+    "However, LangGraph provides low-level supporting infrastructure for defining agents,\n",
+    "which makes some things like persistence, state-management easy.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c925d65f",
+   "id": "2481df46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ba0e965",
+   "id": "7ef3d412",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,21 +45,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6dfe874",
-   "metadata": {},
+   "id": "df563b2a",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "model = ChatDatabricks(endpoint=\"databricks-claude-sonnet-4-5\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad9b55dd",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "source": [
+    "## Tools\n",
+    "\n",
+    "Let's define a couple tools.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b62d4e06",
+   "id": "4cacc1bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tools\n",
     "@tool\n",
     "def multiply(a: int, b: int) -> int:\n",
     "    \"\"\"Multiply `a` and `b`.Args: a: First int, b: Second int\"\"\"\n",
@@ -83,21 +99,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3ee7cba",
-   "metadata": {},
+   "id": "e92bdbb5",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
-    "## Web search\n",
     "\n",
-    "Let's also try adding another interesting tool: web search.\n",
-    "\n"
+    "Now we are ready to define the agent. For this we will build a graph,\n",
+    "consisting of Nodes such as the agent node (where we invoke the LLM), or\n",
+    "a tool node (where we invoke the tools as requested by the LLM).\n",
+    "\n",
+    "Further, we'll define edges (to define the order of execution), and\n",
+    "conditional edges (branching points), which allows us to create loops.\n",
+    "\n",
+    "For the ReAct agent, we'll loop between LLM calls and tool calls. The loop\n",
+    "ends when the LLM does not emit any tool calls (and thus has provided the final answer).\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa57bae5",
+   "id": "b1ea35db",
    "metadata": {
-    "lines_to_next_cell": 1
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
@@ -156,18 +180,8 @@
     "        if last_message.tool_calls:\n",
     "            return \"tool_node\"\n",
     "        return END\n",
-    "        # </solution>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba107d17",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
+    "        # </solution>\n",
+    "\n",
     "    # Exercise 4.4: Initialize graph and add nodes\n",
     "    # Hint: Use StateGraph(MessagesState). Add nodes using .add_node(\"name\", function).\n",
     "    # <solution>\n",
@@ -198,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6cf730a",
+   "id": "d2cda1e4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -222,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a4263eb",
+   "id": "7d06d96a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +250,7 @@
     "@tool\n",
     "def web_search(query: str, max_results: int = 5):\n",
     "    \"\"\"Run a web search\"\"\"\n",
-    "    return DDGS().text(query, max_results=max_results)\n",
+    "    return str(DDGS().text(query, max_results=max_results))\n",
     "\n",
     "\n",
     "# </solution>"
@@ -245,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1041efb4",
+   "id": "efd750ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,23 +277,101 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d1046c",
-   "metadata": {},
+   "id": "e8e238d1",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
-    "# Exercise 4.9: Compare to trajecotry of LangChain's ReAct implementation: (using `create_agent`)\n"
+    "# Exercise 4.9: Let's use the functional API\n",
+    "\n",
+    "\n",
+    "\n",
+    "def build_agent_func(tools):\n",
+    "    # Augment the LLM with tools\n",
+    "    tools_by_name = {tool.name: tool for tool in tools}\n",
+    "    model_with_tools = model.bind_tools(tools)\n",
+    "\n",
+    "    from langchain.messages import (\n",
+    "        ToolCall,\n",
+    "    )\n",
+    "    from langchain_core.messages import BaseMessage\n",
+    "    from langgraph.func import entrypoint, task\n",
+    "    from langgraph.graph import add_messages\n",
+    "\n",
+    "    # Step 2: Define model node\n",
+    "\n",
+    "    @task\n",
+    "    def call_llm(messages: list[BaseMessage]):\n",
+    "        \"\"\"LLM decides whether to call a tool or not\"\"\"\n",
+    "        return model_with_tools.invoke(\n",
+    "            [\n",
+    "                SystemMessage(\n",
+    "                    content=\"You are a helpful assistant tasked with performing arithmetic on a set of inputs.\"\n",
+    "                )\n",
+    "            ]\n",
+    "            + messages\n",
+    "        )\n",
+    "\n",
+    "    # Step 3: Define tool node\n",
+    "    @task\n",
+    "    def call_tool(tool_call: ToolCall):\n",
+    "        \"\"\"Performs the tool call\"\"\"\n",
+    "        tool = tools_by_name[tool_call[\"name\"]]\n",
+    "        return tool.invoke(tool_call)\n",
+    "\n",
+    "    # Step 4: Define agent\n",
+    "    @entrypoint()\n",
+    "    def agent(messages: list[BaseMessage]):\n",
+    "        model_response = call_llm(messages).result()\n",
+    "\n",
+    "        while True:\n",
+    "            if not model_response.tool_calls:\n",
+    "                break\n",
+    "\n",
+    "            # Execute tools\n",
+    "            tool_result_futures = [\n",
+    "                call_tool(tool_call) for tool_call in model_response.tool_calls\n",
+    "            ]\n",
+    "            tool_results = [fut.result() for fut in tool_result_futures]\n",
+    "            messages = add_messages(messages, [model_response, *tool_results])\n",
+    "            model_response = call_llm(messages).result()\n",
+    "\n",
+    "        messages = add_messages(messages, model_response)\n",
+    "        return messages\n",
+    "\n",
+    "    return agent\n",
+    "\n",
+    "\n",
+    "agent = build_agent_func([add, multiply, divide])\n",
+    "Invoke\n",
+    "messages = [HumanMessage(content=\"Add 3 and 4.\")]\n",
+    "for chunk in agent.stream(messages, stream_mode=\"updates\"):\n",
+    "    print(chunk)\n",
+    "    print(\"\\n\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f7aa2ac",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "9cb02064",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
-    "from langchain.agents import create_agent\n",
+    "# Exercise 4.10: Try asking what your last query was. How can we get this to work?\n",
+    "Hint: We need a checkpointer: https://docs.langchain.com/oss/python/langgraph/persistence#checkpoints\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "109d3dcc",
+   "metadata": {},
+   "source": [
+    "# Exercise 4.11 (Bonus): Try out other architetural patterns.\n",
     "\n",
-    "langchain_agent = create_agent(model=model, tools=[web_search])\n",
-    "langchain_response = langchain_agent.invoke(HumanMessage(search_query))"
+    "  For example:\n",
+    "      * add a router\n",
+    "      * add HITL (explicit confirmation of tool calls)\n",
+    "      * structured output"
    ]
   }
  ],
