update makefile and compile

--- a/labs/lab_01_deep_research.ipynb
+++ b/labs/lab_01_deep_research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e5b9c990",
+   "id": "71399809",
    "metadata": {},
    "source": [
     "# Lab 1: Deep Research Agent with Multi-Agent System\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbd8d9df",
+   "id": "9ca06f13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa1e048c",
+   "id": "63a7b65b",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -44,17 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2df167ac",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c9b29c7",
+   "id": "de490f55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49eab0f4",
+   "id": "d46cf947",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -102,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0e990f6",
+   "id": "f6115168",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -140,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6120fb1",
+   "id": "b8692b9f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -157,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7c7acd0",
+   "id": "18b8f898",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -226,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e244e4c3",
+   "id": "de129603",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -244,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "197c29db",
+   "id": "30de7fc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38e4b64d",
+   "id": "a6d610b7",
    "metadata": {},
    "source": [
     "### Run the Graph (Basic)"
@@ -288,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1c86cb7",
+   "id": "7276afbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b72af2b",
+   "id": "dd2aeff5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -318,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b69c1d07",
+   "id": "0172565d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "895f3acd",
+   "id": "7f4096de",
    "metadata": {},
    "source": [
     "### Re-build the Graph with HITL\n",
@@ -397,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5443435c",
+   "id": "c2afdf99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ab710b8",
+   "id": "880477cd",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -448,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a47df73b",
+   "id": "7fe89e72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6526a557",
+   "id": "d5e55bcc",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -537,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab792c50",
+   "id": "897af117",
    "metadata": {},
    "source": [
     "## Exercise 5: Benchmark Evaluation (GAIA)\n",
@@ -549,24 +539,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c091c506",
+   "id": "eb59b12e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "\n",
     "import pandas as pd\n",
+    "from ddgs import DDGS\n",
+    "from langchain import tool\n",
     "from langchain.agents import create_agent\n",
-    "from langchain_community.tools import DuckDuckGoSearchRun\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def web_search(query: str, max_results: int = 5):\n",
+    "    \"\"\"Run a web search\"\"\"\n",
+    "    return str(DDGS().text(query, max_results=max_results))\n",
+    "\n",
     "\n",
     "# 1. Setup ReAct Baseline\n",
-    "agent_react = create_agent(llm, [DuckDuckGoSearchRun()])\n",
+    "agent_react = create_agent(llm, [web_search])\n",
     "\n",
     "# 2. Load Dataset\n",
     "# Ensure create_gaia_dataset() has been run or the file exists.\n",
     "csv_path = \"gaia_validation_level1.csv\"\n",
     "try:\n",
-    "    filtered_df = pd.read_csv(csv_path)[:5]\n",
+    "    filtered_df = pd.read_csv(csv_path)[:2]\n",
     "    print(f\"Loaded {len(filtered_df)} tasks for evaluation.\")\n",
     "except FileNotFoundError:\n",
     "    print(\n",
