--- a/exercises/06_code_execution.ipynb
+++ b/exercises/06_code_execution.ipynb
@@ -2,117 +2,109 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "56f8b163",
+   "id": "fd846ee0",
    "metadata": {},
    "source": [
     "# Exercise 6: Code Execution vs Tool Calling\n",
     "\n",
-    "Goal: Use `smolagents` to implement an agent that writes code to solve problems.\n",
-    "Compare this approach to the standard ReAct tool-calling loop (Exercise 4).\n"
+    "Here, we will use the `LocalPythonExecutor` class from `smolagents` to implement an agent that writes code to solve problems.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76585967",
+   "id": "bcc3a02c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install smolagents litellm\n",
+    "%pip install smolagents\n",
     "%restart_python"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa94d56f",
-   "metadata": {},
+   "id": "a8ba5f14",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
-    "from smolagents import CodeAgent, LiteLLMModel\n",
+    "import pandas as pd\n",
+    "from langchain.agents import create_agent\n",
+    "from langchain.messages import AIMessage, HumanMessage\n",
+    "from langchain.tools import tool\n",
+    "from smolagents import LocalPythonExecutor\n",
+    "from smolagents.local_python_executor import InterpreterError\n",
     "\n",
-    "# 1. Setup the Model\n",
-    "# We use LiteLLMModel to connect to the Databricks endpoint.\n",
-    "# It expects DATABRICKS_HOST and DATABRICKS_TOKEN to be set in the environment.\n",
-    "model = LiteLLMModel(model_id=\"databricks/databricks-claude-sonnet-4-5\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9a81d5ee",
-   "metadata": {},
-   "source": [
-    "### Part 1: Basic Code Execution\n",
-    "`smolagents` allows the LLM to write Python code which is then executed in a local sandbox."
+    "from llm import llm\n",
+    "\n",
+    "df = pd.read_csv(\n",
+    "    \"https://raw.githubusercontent.com/datasciencedojo/datasets/refs/heads/master/titanic.csv\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "interpreter = LocalPythonExecutor(\n",
+    "    additional_authorized_imports=[\n",
+    "        \"pandas\",\n",
+    "        \"matplotlib\",\n",
+    "        \"sklearn\",\n",
+    "        \"sklearn.linear_model\",\n",
+    "        \"matplotlib.pyplot\",\n",
+    "        \"datetime\",\n",
+    "    ],\n",
+    ")\n",
+    "interpreter.send_tools({})\n",
+    "interpreter.state[\"df\"] = df\n",
+    "interpreter(\"import matplotlib; matplotlib.use('Agg'); import matplotlib.pyplot as plt\")\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def exec_python(code: str):\n",
+    "    \"\"\"\n",
+    "    Evaluate python code. Can be used to perform calculations.\n",
+    "    The data to analyze is already defined as the variable 'df'.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        output = interpreter(\n",
+    "            code,\n",
+    "        )\n",
+    "        return f\"Stdout:\\n{str(interpreter.state['_print_outputs'])}\\nOutput: {output}\"\n",
+    "    except InterpreterError as e:\n",
+    "        return f\"There was an error: {e}\"\n",
+    "\n",
+    "\n",
+    "tools = [exec_python]\n",
+    "agent = create_agent(model=llm, tools=tools)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "041595b4",
+   "id": "07131a1f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Let's test the agent\n",
+    "response = agent.invoke(\n",
+    "    {\n",
+    "        \"messages\": [\n",
+    "            HumanMessage(\n",
+    "                # \"can you make some descriptive plots of the data and summarize it? avoid seaborn. save the plot\"\n",
+    "                \"can you make fit a logistc reg for who survived? the data is in df. do not stop until done.\"\n",
+    "            )\n",
+    "        ]\n",
+    "    }\n",
+    ")\n",
     "\n",
-    "# <solution>\n",
-    "# Create an agent that uses code execution\n",
-    "# We grant it access to additional base tools if needed, but the core power is the Python executor.\n",
-    "agent = CodeAgent(tools=[], model=model, add_base_tools=True)\n",
-    "\n",
-    "print(\"Solving simple math...\")\n",
-    "agent.run(\"What is the 10th fibonacci number?\")\n",
-    "# </solution>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eb39a45d",
-   "metadata": {},
-   "source": [
-    "### Part 2: Efficiency Comparison\n",
-    "In Exercise 4, we calculated:\n",
-    "`((144 / 12) * (25 + 75)) / ((10 * 10) / (500 / 5)) + ((81 / 9) * (121 / 11))`\n",
-    "\n",
-    "Using a ReAct agent with basic `add`, `multiply`, `divide` tools, this required **many** round-trips (LLM call -> Tool call -> LLM call -> ...).\n",
-    "\n",
-    "Let's see how a Code Agent handles it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e09547b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "complex_math_query = \"Calculate ((144 / 12) * (25 + 75)) / ((10 * 10) / (500 / 5)) + ((81 / 9) * (121 / 11))\"\n",
-    "\n",
-    "print(f\"\\nSolving complex math: {complex_math_query}\")\n",
-    "result = agent.run(complex_math_query)\n",
-    "\n",
-    "print(f\"\\nResult: {result}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e29af481",
-   "metadata": {},
-   "source": [
-    "### Analysis\n",
-    "\n",
-    "**Tool Calling / ReAct (Exercise 4):**\n",
-    "*   Step 1: Divide 144 / 12 -> 12\n",
-    "*   Step 2: Add 25 + 75 -> 100\n",
-    "*   Step 3: Multiply 12 * 100 -> 1200\n",
-    "*   ... and so on.\n",
-    "*   **Total steps:** ~10+ API calls. Slow, expensive, prone to losing context.\n",
-    "\n",
-    "**Code Execution (Exercise 6):**\n",
-    "*   Step 1: Write a Python script: `print(((144 / 12) * (25 + 75)) / ...)`\n",
-    "*   Step 2: Execute.\n",
-    "*   **Total steps:** 1 API call. Fast, cheap, exact.\n",
-    "\n",
-    "**Takeaway:** For logic, math, and data tasks, allowing the agent to *write code* is often vastly superior to giving it granular tools."
+    "# Print the message history\n",
+    "for msg in response[\"messages\"]:\n",
+    "    if type(msg) is AIMessage and msg.tool_calls:\n",
+    "        print(\"=\" * 20 + \" Code \" + \"=\" * 20)\n",
+    "        print(msg.tool_calls[0][\"args\"][\"code\"])\n",
+    "        print(\"=\" * 50)\n",
+    "    print(msg.content)\n",
+    "    print(\"\\n\")"
    ]
   }
  ],
